iptables-rules.txt
# Generated by iptables-save v1.8.7 on Fri Apr  5 12:21:40 2024

*filter

:INPUT DROP [8:2241]

:FORWARD DROP [0:0]

:OUTPUT DROP [866:95223]

-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

-A INPUT -p icmp -j ACCEPT

-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT

-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

-A OUTPUT -p icmp -j ACCEPT

-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT

-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT

COMMIT

# Completed on Fri Apr  5 12:21:40 2024

# Generated by iptables-save v1.8.7 on Fri Apr  5 12:21:40 2024

*nat

:PREROUTING ACCEPT [0:0]

:INPUT ACCEPT [0:0]

:OUTPUT ACCEPT [0:0]

:POSTROUTING ACCEPT [0:0]

-A POSTROUTING -o enp0s9 -j MASQUERADE

COMMIT

# Completed on Fri Apr  5 12:21:40 2024
